update version orchestra/testbench

--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
         "react/stream": "~0.4.4",
         "react/event-loop": "~0.4.2",
         "react/socket-client": "~0.4.5",
-        "orchestra/testbench": "~3.1"
+        "orchestra/testbench": "~3.1.8|~3.2.6|~3.3.2"
     },
     "autoload": {
         "psr-4": {
