--- a/.gitattributes
+++ b/.gitattributes
@@ -4,5 +4,5 @@
 /.gitattributes export-ignore
 /.gitignore export-ignore
 /.travis.yml export-ignore
-/phpcs.xml export-ignore
+/.php_cs export-ignore
 /phpunit.xml export-ignore
