--- a/composer.json
+++ b/composer.json
@@ -22,11 +22,11 @@
         "enniel/ami": "~1.2.0"
     },
     "require-dev": {
-        "squizlabs/php_codesniffer": "~2.7",
         "phpunit/phpunit": "~4.8|~5.0",
         "react/promise": "~2.4.1",
         "orchestra/testbench": "~3.1.8|~3.2.6|~3.3.2",
-        "orchestra/database": "~3.1"
+        "orchestra/database": "~3.1",
+        "friendsofphp/php-cs-fixer": "^2.0"
     },
     "autoload": {
         "psr-4": {
@@ -49,7 +49,7 @@
             "@phpcs"
         ],
         "phpunit": "php vendor/bin/phpunit",
-        "phpcs": "php vendor/bin/phpcs"
+        "phpcs": "php vendor/bin/php-cs-fixer --diff --dry-run -v fix"
     },
     "minimum-stability": "dev",
     "prefer-stable": true
