--- a/.gitattributes
+++ b/.gitattributes
@@ -3,6 +3,7 @@
 # Ignore following folder/file.
 /.gitattributes export-ignore
 /.gitignore export-ignore
+/.styleci.yml export-ignore
 /.travis.yml export-ignore
 /.php_cs export-ignore
 /phpunit.xml export-ignore
